implementation completed